--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="google-site-verification" content="DH63NsFaoB_Vb_mnoq8fNircDFilQwQ5a_nnCYSEiL4" />
     <title>{title || 'The Besedka Loop'}</title>
     <style>
       /* Global Styles */
