--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -56,7 +56,7 @@ const { title } = Astro.props;
       <h1><a href="/">⛺ The Besedka Loop</a></h1>
       <nav>
         <a href="/">Home</a>
-        <a href="/#alumni">The 10 Alumni</a>
+        <a href="/archives">Archives</a>
         <a href="/about">About</a>
       </nav>
     </header>
